2008-03-25  Sam Steingold  <sds@gnu.org>

	fix bug [ 1924501 ]: cannot find gllib include
	* makemake.in (CPPFLAGS): pass -Igllib here, not CFLAGS

2008-03-24  Vladimir Volovich  <vvv2@users.sourceforge.net>
	Sam Steingold  <sds@gnu.org>

	fix bug [ 1924508 ]: undefined symbol getSP when linking lisp.run
	on Sparc Solaris 2.8 using Sun Studio 11
	* spsparc.d, spsparc64.d: add global getSP

2008-03-24  Sam Steingold  <sds@gnu.org>

	fix bug [ 1924506 ]: void function cannot return value
	* foreign.d (convert_to_foreign): "return void" does not work on
	Solaris 2.8

2008-03-24  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (NULL): #undef before defining
	to avoid "warning: macro redefined: NULL"

2008-03-24  Sam Steingold  <sds@gnu.org>

	* gray.lisp (stream-read-sequence): define methods for
	fundamental-binary-input-stream & fundamental-character-input-stream
	(stream-write-sequence): define methods for
	fundamental-binary-output-stream & fundamental-character-output-stream

2008-03-23  Sam Steingold  <sds@gnu.org>

	implemented GRAY:STREAM-READ-SEQUENCE and GRAY:STREAM-WRITE-SEQUENCE
	* defs2.lisp (%read-sequence): rename from READ-SEQUENCE
	(read-sequence): call it or GRAY::STREAM-READ-SEQUENCE
	(%write-sequence): renamed from WRITE-SEQUENCE
	(write-sequence): call it or GRAY::STREAM-WRITE-SEQUENCE
	* gray.lisp (stream-read-sequence, stream-write-sequence): implemented
	Suggested by Anton Vodonosov <avodonosov@yandex.ru>.

2008-03-21  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, debug.d (gdb_show_stack): renamed from ext_show_stack
	* lispbibl.d (gdb_disassemble_closure): add protorype
	* debug.d (gdb_disassemble_closure): implement
	* constsym.d (disassemble_closures): add

2008-03-21  Sam Steingold  <sds@gnu.org>

	* eval.d (cclosure_run) [USE_JITC]: new local inline
	(interpret_bytecode) [USE_JITC]: use it instead of explicit code
	* lightning.c: use it instead of interpret_bytecode_()

2008-03-19  Sam Steingold  <sds@gnu.org>
