@@ -50,6 +50,7 @@ dnl
 BOLD_MSG([checks for system features])
 AC_SYS_LARGEFILE    dnl DEFS _FILE_OFFSET_BITS, _LARGE_FILES
 CL_CC_GCC           dnl sets variables CC_GCC, GCC_X_NONE
+CL_CC_SUNPRO        dnl sets variable CC_SUNPRO
 CL_CC_CPLUSPLUS     dnl sets variable CC_CPLUSPLUS
 CL_CC_NEED_CCPAUX   dnl sets variable CC_NEED_CCPAUX
 CL_CC_NEED_DEEMA    dnl sets variable CC_NEED_DEEMA
